# Shitpost

./: .gitignore  DEPLOY.md  LICENSE  README.md
docker/: docker-compose.yml
live-chat/: .env.example  README.md  env.example  env.production.example  index.html  latest.json  overlay.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
live-chat/src/: App.css  App.tsx  constants.ts  i18n.ts  main-overlay.tsx  main.tsx  overlay.css  overlay.tsx  shared.ts
live-chat/src-tauri/: Cargo.toml  tauri.conf.json
live-chat/src-tauri/capabilities/: default.json
live-chat/src-tauri/icons/: icon.icns
live-chat/src-tauri/src/: lib.rs  main.rs
live-chat/src/components/: HistoryTab.tsx  Icons.tsx  MemesTab.tsx  PseudoConfig.tsx  Titlebar.tsx  Updater.tsx  WelcomeScreen.tsx
live-chat/src/contexts/: AuthContext.tsx  LangContext.tsx
live-chat/src/pages/: LoginPage.tsx  RegisterPage.tsx
live-chat/src/services/: api.ts  historyDb.ts  memesUtils.ts
live-chat/~/.tauri/: shitpost.key  shitpost.key.pub
server/: .env.example  README.md  package-lock.json  package.json
server/examples/: test-client.js
server/prisma/: schema.prisma
server/prisma/migrations/20260307151607_init/: migration.sql
server/src/: index.ts
server/src/managers/: ClientManager.ts
server/src/middleware/: AuthMiddleware.ts  SecurityMiddleware.ts
server/src/routes/: AuthRoutes.ts  FriendsRoutes.ts  GroupsRoutes.ts
server/src/services/: AuthService.ts  FriendsService.ts  GroupsService.ts  PrismaService.ts  RedisService.ts
server/src/types/: index.ts
(+4 files in other folders)
